--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 --color-blue-light: #C7EEFF;
                 --color-red: #F90000;
                 --color-orange: #DC9012;
+                --color-purple: #f0f;
+                --color-cyan: #0ff;
+                --color-main-border: #222a32;
+                --color-page-gradient-from: #485563;
+                --color-page-gradient-to: #29323c;
             }
 
             @font-face {
@@ -43,7 +48,7 @@
             html {
                 height: 100%;
 
-                background: linear-gradient(to bottom right, #485563, #29323c);
+                background: linear-gradient( to bottom right, var(--color-page-gradient-from), var(--color-page-gradient-to) );
 
                 color: var(--color-white);
                 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
@@ -108,14 +113,14 @@
                 height: 200px;
                 position: absolute;
 
-                border: 12px solid #1d242b;
+                border: 12px solid var(--color-main-border);
                 border-radius: 100%;
                 overflow: hidden;
 
                 transform: translate(-50%, -50%);
 
-                box-shadow: 0 0 0 rgba(255, 255, 255, 0);
-                transition: box-shadow 1.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+                box-shadow: 0 0 0 transparent;
+                transition: all 1.6s cubic-bezier(0.165, 0.84, 0.44, 1);
             }
 
             .loading main {
@@ -220,7 +225,7 @@
             }
             @keyframes pulse {
                 50% {
-                    box-shadow: -5px 0 20px #f0f, 5px 0 20px #0ff;
+                    box-shadow: -5px 0 20px var(--color-purple), 5px 0 20px var(--color-cyan);
                 }
             }
 
@@ -330,9 +335,7 @@
 
             req.addEventListener( 'load', function() {
                 if ( this.status !== 200 ) {
-                    alert( 'Request failed' );
-
-                    return;
+                    return alert( 'Request failed: ' + this.status );
                 }
 
                 const json = JSON.parse( this.responseText );
